# dudude-messenger

./: .gitignore  README.md  app.py  exceptions.py  pyproject.toml
api/: __init__.py
api/controllers/: chat.py
api/routers/: chat.py  messenge.py
api/service/: enums.py  exceptions.py
app/: __init__.py
core/: config.py
core/db/: transactions.py
database/: __init__.py  connection.py
dbschema/: chat.esdl  messenge.esdl  types.esdl  user.esdl
edgedbdir/: edgedb.toml
edgedbdir/dbschema/: chat.esdl  messenge.esdl  password_recovery.esdl  token.esdl  types.esdl  user.esdl
edgedbdir/dbschema/migrations/: 00003.edgeql  00005.edgeql  00008.edgeql
messenger/: app.py
messenger/controllers/: chat.py  create_chat.py  create_user.py  user.py
messenger/models/: chat.py  user.py
messenger/routers/: chat.py  user.py
messenger/service/: enums.py  utils.py
migrations/: 00001.edgeql  00002.edgeql  00004.edgeql  00006.edgeql  00007.edgeql  00009.edgeql  00010.edgeql  00011.edgeql
