[tool.poetry]
name = "edge_db_test"
version = "0.1.0"
description = ""
authors = ["Kirill Inyakin <kirillinyakin@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
edgedb = "^0.18.0"
uvicorn = "^0.15.0"
psycopg2-binary = "^2.9.2"
pymongo = "^3.12.1"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
