[tool.poetry]
name = "dudude-messenger"
version = "0.1.0"
description = ""
authors = ["Kirill Inyakin <kirillinyakin@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
edgedb = "^0.18.4"
uvicorn = "^0.15.0"
ujson = "^4.3.0"
kafka-python = "^2.0.2"
pydantic = {extras = ["email"], version = "^1.8.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
